--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Pekko -  Minimal Black HTML Template</title>
+        <title>Rodolfo's Portfolio</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="description" content="Template by CocoBasic" />
-        <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
-        <meta name="author" content="CocoBasic" />
+        <meta name="description" content="Projects and Creations" />
+        <meta name="keywords" content="RodolfoDiniz, Design, Portfolio" />
+        <meta name="author" content="Rodolfo" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="images/favicon.ico" />    
-        <link href='https://fonts.googleapis.com/css?family=Work%20Sans:400,500,700%7CUnna:400,700' rel='stylesheet' type='text/css'>		
+        <link rel="shortcut icon" href="images/favicon.ico" />
+        <link href='https://fonts.googleapis.com/css?family=Work%20Sans:400,500,700%7CUnna:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css"  href='style.css' />
 
         <!--[if lt IE 9]>
-                <script src="js/html5shiv.js"></script>            
-                <script src="js/respond.min.js"></script>                   
-        <![endif]-->         
+                <script src="js/html5shiv.js"></script>
+                <script src="js/respond.min.js"></script>
+        <![endif]-->
     </head>
 
     <body class="page-background">
 
-        <div class="site-wrapper">                  
-            <div class="doc-loader"></div>  
+        <div class="site-wrapper">
+            <div class="doc-loader"></div>
 
-            <div class="menu-holder-front">     
+            <div class="menu-holder-front">
                 <div class="header-logo">
                     <a href="index.html">
-                        <img src="images/logo.png" alt="Pekko">
-                    </a>               
+                        <img src="images/logo.png" alt="Rodolfo">
+                    </a>
                 </div>
 
                 <div class="toggle-holder">
                     <div id="toggle">
                         <div class="menu-line"></div>
-                    </div>                
-                </div>   
-            </div> 
+                    </div>
+                </div>
+            </div>
 
-            <div class="menu-holder-back">               
-                <div class="menu-wrapper-back">               
+            <div class="menu-holder-back">
+                <div class="menu-wrapper-back">
                     <nav id="header-main-menu">
                         <ul class="main-menu sm sm-clean">
                             <li>
                                 <span class="menu-num">01</span>
-                                <a href="index.html">Home</a>                                
+                                <a href="index.html">Home</a>
                             </li>
                             <li>
                                 <span class="menu-num">02</span>
                                 <a href="about.html">About</a>
-                            </li>                            
+                            </li>
                             <li>
                                 <span class="menu-num">03</span>
                                 <a href="blog.html">Blog</a>
@@ -57,25 +57,25 @@
                                 <span class="menu-num">04</span>
                                 <a href="contact.html">Contact</a>
                             </li>
-                        </ul>                        
-                    </nav>       
+                        </ul>
+                    </nav>
 
                     <div class="menu-right-text">
                         <p class="menu-text-title">EMAIL</p>
                         <div class="menu-text">
-                            hello@yourwebsite.com
+                            rodolfobiazi@icloud.com
                         </div>
                         <br>
                         <p class="menu-text-title">PHONE</p>
                         <div class="menu-text">
-                            +988 345 783 174
+                            +55 41 99708-2777
                         </div>
                         <br>
                         <p class="menu-text-title">LOCATION</p>
                         <div class="menu-text">
-                            2546 Some Street, <br>
-                            US Based Left 5,<br>
-                            United States, New York
+
+                            Curitiba, PR<br>
+                            Brazil
                         </div>
                         <br>
                         <div class="social-holder ">
@@ -85,13 +85,13 @@
                         </div>
                     </div>
                 </div>
-            </div>                      
+            </div>
 
             <!-- Page Content Holder -->
             <div id="content" class="site-content">
                 <div class="content-holder center-relative content-1170">
                     <div id="portfolio-wrapper">
-                        <ul class="grid" id="portfolio-grid">                            
+                        <ul class="grid" id="portfolio-grid">
                             <li class="grid-sizer"></li>
 
                             <li class="grid-item p_one_hlaf animate">
@@ -168,31 +168,31 @@
 
                         </ul>
                     </div>
-                </div> 
-            </div> 
-            <!-- End Page Content Holder --> 
+                </div>
+            </div>
+            <!-- End Page Content Holder -->
 
             <footer class="footer">
                 <div class="footer-content center-relative">
 
                     <div class="footer-logo">
                         <img src="images/logo.png" alt="Pekko">
-                    </div>        
+                    </div>
 
                     <div class="copyright-holder">
-                        © 2019 - Pekko HTML Template by <a href="https://cocobasic.com">Coco+Basic</a>.            
+                        © 2020 - Rodolfo Diniz
                     </div>
-                </div>                
+                </div>
             </footer>
 
         </div>
 
         <!--Load JavaScript-->
-        <script src="js/jquery.js"></script>			
-        <script src='js/jquery.smartmenus.min.js'></script>                                 
-        <script src='js/isotope.pkgd.js'></script>                                    
-        <script src='js/jquery.prettyPhoto.js'></script>                                            
-        <script src='js/swiper.min.js'></script>                        
+        <script src="js/jquery.js"></script>
+        <script src='js/jquery.smartmenus.min.js'></script>
+        <script src='js/isotope.pkgd.js'></script>
+        <script src='js/jquery.prettyPhoto.js'></script>
+        <script src='js/swiper.min.js'></script>
         <script src='js/main.js'></script>
     </body>
 </html>
