Add hover effect

--- a/contact.html
+++ b/contact.html
@@ -106,9 +106,9 @@
                         </p>
                         <br>
                         <p class="my-info">
-                            <span>Address:</span> New York, NY, United States <br>
-                            <span>Phone:</span> +1 234-567-890 <br>
-                            <span>Hours:</span> 6:00 am – 2:00 am
+                            <span>Address:</span> Curitiba, Brazil <br>
+                            <span>Phone:</span> +55 41 99708-2777 <br>
+                            <span>Hours:</span> 24/7/365
                         </p>
                         <br>
 
