--- a/about.html
+++ b/about.html
@@ -8,47 +8,47 @@
         <meta name="author" content="CocoBasic" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="images/favicon.ico" />    
-        <link href='https://fonts.googleapis.com/css?family=Work%20Sans:400,500,700%7CUnna:400,700' rel='stylesheet' type='text/css'>		
+        <link rel="shortcut icon" href="images/favicon.ico" />
+        <link href='https://fonts.googleapis.com/css?family=Work%20Sans:400,500,700%7CUnna:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css"  href='style.css' />
 
         <!--[if lt IE 9]>
-                <script src="js/html5shiv.js"></script>            
-                <script src="js/respond.min.js"></script>                   
-        <![endif]-->         
+                <script src="js/html5shiv.js"></script>
+                <script src="js/respond.min.js"></script>
+        <![endif]-->
     </head>
 
     <body class="page-background">
 
-        <div class="site-wrapper">                  
-            <div class="doc-loader"></div>  
+        <div class="site-wrapper">
+            <div class="doc-loader"></div>
 
-            <div class="menu-holder-front">     
+            <div class="menu-holder-front">
                 <div class="header-logo">
                     <a href="index.html">
                         <img src="images/logo.png" alt="Pekko">
-                    </a>               
+                    </a>
                 </div>
 
                 <div class="toggle-holder">
                     <div id="toggle">
                         <div class="menu-line"></div>
-                    </div>                
-                </div>   
-            </div> 
+                    </div>
+                </div>
+            </div>
 
-            <div class="menu-holder-back">               
-                <div class="menu-wrapper-back">               
+            <div class="menu-holder-back">
+                <div class="menu-wrapper-back">
                     <nav id="header-main-menu">
                         <ul class="main-menu sm sm-clean">
                             <li>
                                 <span class="menu-num">01</span>
-                                <a href="index.html">Home</a>                                
+                                <a href="index.html">Home</a>
                             </li>
                             <li>
                                 <span class="menu-num">02</span>
                                 <a href="about.html">About</a>
-                            </li>                            
+                            </li>
                             <li>
                                 <span class="menu-num">03</span>
                                 <a href="blog.html">Blog</a>
@@ -57,8 +57,8 @@
                                 <span class="menu-num">04</span>
                                 <a href="contact.html">Contact</a>
                             </li>
-                        </ul>                        
-                    </nav>       
+                        </ul>
+                    </nav>
 
                     <div class="menu-right-text">
                         <p class="menu-text-title">EMAIL</p>
@@ -85,15 +85,14 @@
                         </div>
                     </div>
                 </div>
-            </div>                      
+            </div>
 
             <!-- Page Content Holder -->
             <div id="content" class="site-content">
                 <div class="content-holder center-relative content-1170">
                     <h1 class="entry-title page-title center-text">
-                        My name is Peter Williams <br> and I’m designer &amp; photographer<br>
+                        My name is Rodolfo Diniz <br> and I’m a designer &amp; creator <br>
                     </h1>
-
                     <img class="page-featured-image" src="images/about.jpg" alt="" />
 
                     <div class="one_half">
@@ -109,7 +108,7 @@
 
                             <li class="timeline-event">
                                 <span class="timeline-circle"></span>
-                                <div class="timeline-event-content">                                    
+                                <div class="timeline-event-content">
                                     Rings of Uranus the only home we’ve ever known. Permanence of the stars Tunguska event drake equation encyclopaedia galactica great turbulent
                                 </div>
                                 <div class="timeline-event-date">2017</div>
@@ -139,36 +138,42 @@
                                 <div class="timeline-event-date">2025</div>
                             </li>
 
-                        </ul>                            
+                        </ul>
                     </div>
 
                     <div class="one_half last">
-                        Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm of global death rich in heavy atoms with pretty stories for which there’s little good evidence something incredible is waiting to be known not a sunrise but a galaxyrise shores of the cosmic ocean inconspicuous motes of rock.
+                        In 2012 I moved to Curitiba to start a higher education. Like every young person at this age, I was completely lost as to what career path to pursue and eventually I choose to study Law at PUCPR.
                         <br>
                         <br>
-                        Galaxies network of wormholes birth extraplanetary Apollonius of Perga adipisci velit! Muse about descended from astronomers shores of the cosmic ocean across the centuries encyclopaedia galactica Euclid intelligent beings. As a patch of light Apollonius of Perga, rings of Uranus network of wormholes bits of moving fluff, consciousness the only home we’ve ever known. Galaxies, corpus callosum radio telescope. Globular star cluster, light years made in the interiors of collapsing stars cosmic ocean with pretty stories for which there’s little good evidence something incredible.
+                        During my degree I worked in some places, and even at Walt Disney World, which was an amazing experience where I learned a lot about business - especially with customer service (which will be very important in the future of this timeline) - but none of those other jobs suited me. Until I joined a law firm, Efing & Rocha, where I spent almost two years there, I was very fond of my work because I worked with the academic area. But I still couldn't see myself realized as a professional in the area I was working.
+                        <br>
+                        <br>
+                        So I realized that I had to go on a path to find my true motivation. I noticed that all my hobbies and passions were related to an area that I had never even considered before, <b>Design</b>. And going to lectures and taking courses I found myself falling more and more in love with this area full of creativity and innovation. So I started a new degree, this time in Design at PUCPR, where I could choose from a variety of elective courses and focus in the Interaction Design.
+                        <br>
+                        <br>
+                        Later I left the law firm to look for opportunities in the new area, and some time later I joined the Apple Developer Academy. It has been a unique and very rewarding opportunity since I’m learning a lot about user interface and developing coding skills.
                     </div>
                     <div class="clear"></div>
 
                     <div class="social-holder center-text top-60">
-                        <a class="social-text" href="#">TWITTER</a>
-                        <a class="social-text" href="#">FACEBOOK</a>
-                        <a class="social-text" href="#">INSTAGRAM</a>
+                        <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
+                        <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
+                        <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
                     </div>
 
-                </div> 
-            </div> 
-            <!-- End Page Content Holder --> 
+                </div>
+            </div>
+            <!-- End Page Content Holder -->
 
             <footer class="footer">
                 <div class="footer-content center-relative">
 
                     <div class="footer-logo">
                         <img src="images/logo.png" alt="Pekko">
-                    </div>        
+                    </div>
 
                     <div class="copyright-holder">
-                        © 2019 - Pekko HTML Template by <a href="https://cocobasic.com">Coco+Basic</a>.            
+                        © 2019 - Pekko HTML Template by <a href="https://cocobasic.com">Coco+Basic</a>.
                     </div>
                 </div>
             </footer>
@@ -176,11 +181,11 @@
         </div>
 
         <!--Load JavaScript-->
-        <script src="js/jquery.js"></script>			
-        <script src='js/jquery.smartmenus.min.js'></script>                                 
-        <script src='js/isotope.pkgd.js'></script>                                    
-        <script src='js/jquery.prettyPhoto.js'></script>                                            
-        <script src='js/swiper.min.js'></script>                        
+        <script src="js/jquery.js"></script>
+        <script src='js/jquery.smartmenus.min.js'></script>
+        <script src='js/isotope.pkgd.js'></script>
+        <script src='js/jquery.prettyPhoto.js'></script>
+        <script src='js/swiper.min.js'></script>
         <script src='js/main.js'></script>
     </body>
 </html>
