--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -1,54 +1,54 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Pekko -  Minimal Black HTML Template</title>
+        <title>Rodolfo - ADS Eletro</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Template by CocoBasic" />
         <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
         <meta name="author" content="CocoBasic" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="images/favicon.ico" />    
-        <link href='https://fonts.googleapis.com/css?family=Work%20Sans:400,500,700%7CUnna:400,700' rel='stylesheet' type='text/css'>		
+        <link rel="shortcut icon" href="images/favicon.ico" />
+        <link href='https://fonts.googleapis.com/css?family=Work%20Sans:400,500,700%7CUnna:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css"  href='style.css' />
 
         <!--[if lt IE 9]>
-                <script src="js/html5shiv.js"></script>            
-                <script src="js/respond.min.js"></script>                   
-        <![endif]-->           
+                <script src="js/html5shiv.js"></script>
+                <script src="js/respond.min.js"></script>
+        <![endif]-->
     </head>
 
     <body class="page-background single single-portfolio">
 
-        <div class="site-wrapper">                  
-            <div class="doc-loader"></div>  
+        <div class="site-wrapper">
+            <div class="doc-loader"></div>
 
-            <div class="menu-holder-front">     
+            <div class="menu-holder-front">
                 <div class="header-logo">
                     <a href="index.html">
                         <img src="images/logo.png" alt="Pekko">
-                    </a>               
+                    </a>
                 </div>
 
                 <div class="toggle-holder">
                     <div id="toggle">
                         <div class="menu-line"></div>
-                    </div>                
-                </div>   
-            </div> 
+                    </div>
+                </div>
+            </div>
 
-            <div class="menu-holder-back">               
-                <div class="menu-wrapper-back">               
+            <div class="menu-holder-back">
+                <div class="menu-wrapper-back">
                     <nav id="header-main-menu">
                         <ul class="main-menu sm sm-clean">
                             <li>
                                 <span class="menu-num">01</span>
-                                <a href="index.html">Home</a>                                
+                                <a href="index.html">Home</a>
                             </li>
                             <li>
                                 <span class="menu-num">02</span>
                                 <a href="about.html">About</a>
-                            </li>                            
+                            </li>
                             <li>
                                 <span class="menu-num">03</span>
                                 <a href="blog.html">Blog</a>
@@ -57,8 +57,8 @@
                                 <span class="menu-num">04</span>
                                 <a href="contact.html">Contact</a>
                             </li>
-                        </ul>                        
-                    </nav>       
+                        </ul>
+                    </nav>
 
                     <div class="menu-right-text">
                         <p class="menu-text-title">EMAIL</p>
@@ -85,14 +85,14 @@
                         </div>
                     </div>
                 </div>
-            </div>                      
+            </div>
 
             <!-- Page Content Holder -->
             <div id="content" class="site-content">
                 <div class="content-holder center-relative content-1170">
-                    <h1 class="entry-title page-title center-text">
-                        Art of the Camera
-                    </h1>
+                    <!-- <h1 class="entry-title page-title center-text">
+                        ADS Eletro
+                    </h1> -->
 
                     <div id="slider1" class="simple-image-slider-wrapper relative swiper-container" data-speed="1500" data-auto="true">
                         <div class="swiper-wrapper image-slider slider">
@@ -107,54 +107,54 @@
                             </div>
                         </div>
                         <div class="clear"></div>
-                        <div class="swiper-pagination simple-image-slider-pagination swiper-pagination-slider1"></div>                                
+                        <div class="swiper-pagination simple-image-slider-pagination swiper-pagination-slider1"></div>
                     </div>
 
                     <div class="two_third">
                         <div class="medium-text">
-                            Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean roxysm 
-                            of global death rich in heavy atoms with miles away from sun.
+                            The corporate logo consists in two elements, the symbol and its typography. The symbol is a powerful image that evokes the culture of the company's products - the connection between electrical power and hydraulic fluidity.
                         </div>
                         <br>
                         <p>
-                            Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
-                            of global death rich in heavy atoms with pretty stories for which there’s little good evidence something incredible
-                            is waiting to be known not a sunrise but a galaxyrise shores of the cosmic ocean inconspicuous motes of rock.
+                          The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letter shapes are shaped to compliment and balance perfectly with the logo symbol.
+<br>
+<br>
+                          The two corporate colors are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its strong combination of modern and classic, a timeless solution.
                         </p>
                     </div>
 
-                    <div class="one_third last">                                                   
+                    <div class="one_third last">
                         <div class="info-code">
                             <p class="info-code-title">PROJECT</p>
-                            <p class="info-code-content">Corporate Branding</p>
+                            <p class="info-code-content">Logo Redesign</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">CLIENT</p>
-                            <p class="info-code-content">Envato Studio</p>
+                            <p class="info-code-content">ADS Eletro</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">DATE</p>
-                            <p class="info-code-content">September 2018</p>
+                            <p class="info-code-content">2018</p>
                         </div>
-                        <div class="info-code">
+                        <!-- <div class="info-code">
                             <p class="info-code-title">DESIGNER</p>
-                            <p class="info-code-content">John Petters</p>
-                        </div>
+                            <p class="info-code-content">Rodolfo Diniz</p>
+                        </div> -->
                     </div>
-                    <div class="clear"></div>                            
-                </div> 
-            </div> 
-            <!-- End Page Content Holder --> 
+                    <div class="clear"></div>
+                </div>
+            </div>
+            <!-- End Page Content Holder -->
 
             <footer class="footer">
                 <div class="footer-content center-relative">
 
                     <div class="footer-logo">
                         <img src="images/logo.png" alt="Pekko">
-                    </div>        
+                    </div>
 
                     <div class="copyright-holder">
-                        © 2019 - Pekko HTML Template by <a href="https://cocobasic.com">Coco+Basic</a>.            
+                        © 2019 - Pekko HTML Template by <a href="https://cocobasic.com">Coco+Basic</a>.
                     </div>
                 </div>
             </footer>
@@ -162,11 +162,11 @@
         </div>
 
         <!--Load JavaScript-->
-        <script src="js/jquery.js"></script>			
-        <script src='js/jquery.smartmenus.min.js'></script>                                 
-        <script src='js/isotope.pkgd.js'></script>                                    
-        <script src='js/jquery.prettyPhoto.js'></script>                                            
-        <script src='js/swiper.min.js'></script>                        
+        <script src="js/jquery.js"></script>
+        <script src='js/jquery.smartmenus.min.js'></script>
+        <script src='js/isotope.pkgd.js'></script>
+        <script src='js/jquery.prettyPhoto.js'></script>
+        <script src='js/swiper.min.js'></script>
         <script src='js/main.js'></script>
     </body>
 </html>
