--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 
                             <li class="grid-item p_one_hlaf animate">
                                 <a class="item-link" href="single-portfolio.html">
-                                    <img src="images/home_01.jpg" alt="" />
+                                    <img src="images/home_02.png" alt="" />
                                     <div class="portfolio-text-holder">
-                                        <p class="portfolio-title">PHOTOGRAPHY</p>
+                                        <p class="portfolio-title">LOGOTYPE</p>
                                     </div>
                                 </a>
                             </li>
