--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -136,10 +136,10 @@
                             <p class="info-code-title">DATE</p>
                             <p class="info-code-content">2018</p>
                         </div>
-                        <!-- <div class="info-code">
-                            <p class="info-code-title">DESIGNER</p>
-                            <p class="info-code-content">Rodolfo Diniz</p>
-                        </div> -->
+                        <div class="info-code">
+                            <p class="info-code-title">LOCATION</p>
+                            <p class="info-code-content">São José dos Pinhais, Brazil</p>
+                        </div>
                     </div>
                     <div class="clear"></div>
                 </div>
