--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Pekko -  Minimal Black HTML Template</title>
+        <title>Rodolfo - About</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="description" content="Template by CocoBasic" />
-        <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
-        <meta name="author" content="CocoBasic" />
+        <meta name="description" content="Projects and Creations" />
+        <meta name="keywords" content="RodolfoDiniz, Design, Portfolio" />
+        <meta name="author" content="Rodolfo" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
         <link rel="shortcut icon" href="images/favicon.ico" />
@@ -63,25 +63,25 @@
                     <div class="menu-right-text">
                         <p class="menu-text-title">EMAIL</p>
                         <div class="menu-text">
-                            hello@yourwebsite.com
+                            rodolfobiazi@icloud.com
                         </div>
                         <br>
                         <p class="menu-text-title">PHONE</p>
                         <div class="menu-text">
-                            +988 345 783 174
+                            +55 41 99708-2777
                         </div>
                         <br>
                         <p class="menu-text-title">LOCATION</p>
                         <div class="menu-text">
-                            2546 Some Street, <br>
-                            US Based Left 5,<br>
-                            United States, New York
+
+                            Curitiba, PR<br>
+                            Brazil
                         </div>
                         <br>
                         <div class="social-holder ">
-                            <a class="social-text" href="#">TWITTER</a>
-                            <a class="social-text" href="#">FACEBOOK</a>
-                            <a class="social-text" href="#">INSTAGRAM</a>
+                            <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
+                            <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
+                            <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
                         </div>
                     </div>
                 </div>
@@ -142,16 +142,20 @@
                     </div>
 
                     <div class="one_half last">
-                        In 2012 I moved to Curitiba to start a higher education. Like every young person at this age, I was completely lost as to what career path to pursue and eventually I choose to study Law at PUCPR.
+                      <div class="medium-text">
+                      Technology enthusiast and passionate about Design. I like to work on ambitious projects and with people who are passionate with what they do.
+                      </div>
+                      <br>
+                        In 2012 I moved to Curitiba to start a higher education. Like every young person at this age, I was completely lost as to what career path to pursue and eventually I choose to study Law.
                         <br>
                         <br>
-                        During my degree I worked in some places, and even at Walt Disney World, which was an amazing experience where I learned a lot about business - especially with customer service (which will be very important in the future of this timeline) - but none of those other jobs suited me. Until I joined a law firm, Efing & Rocha, where I spent almost two years there, I was very fond of my work because I worked with the academic area. But I still couldn't see myself realized as a professional in the area I was working.
+                        During my degree I worked in the public area, in law offices, and even at Walt Disney World - which was an amazing experience. Over there I learned a lot about business - especially with customer service (which will be very important in the future of this timeline) - but none of those other jobs really suited me.
                         <br>
                         <br>
-                        So I realized that I had to go on a path to find my true motivation. I noticed that all my hobbies and passions were related to an area that I had never even considered before, <b>Design</b>. And going to lectures and taking courses I found myself falling more and more in love with this area full of creativity and innovation. So I started a new degree, this time in Design at PUCPR, where I could choose from a variety of elective courses and focus in the Interaction Design.
+                        So I realized that I had to go on a path to find my true motivation. I noticed that all my hobbies and passions were related to an area that I had never even considered before, <b>Design</b>. After going to lectures and taking courses I found purpose and meaning in this area full of creativity and innovation. So I started a new degree, this time in Design, where I could choose from a variety of elective courses and focus in the area of <b>User Interaction</b>.
                         <br>
                         <br>
-                        Later I left the law firm to look for opportunities in the new area, and some time later I joined the Apple Developer Academy. It has been a unique and very rewarding opportunity since I’m learning a lot about user interface and developing coding skills.
+                        Currently I'm part of the Apple Developer Academy. It has been a unique and very rewarding opportunity since I’m learning a lot about user interface and developing coding skills.
                     </div>
                     <div class="clear"></div>
 
