--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-      <title>Rodolfo</title>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <meta name="description" content="Projects and Creations" />
-      <meta name="keywords" content="RodolfoDiniz, Design, Portfolio" />
-      <meta name="author" content="Rodolfo" />
-      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <title>Rodolfo</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="description" content="Projects and Creations" />
+        <meta name="keywords" content="RodolfoDiniz, Design, Portfolio" />
+        <meta name="author" content="Rodolfo" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
         <link rel="shortcut icon" href="images/favicon.ico" />
         <link href='https://fonts.googleapis.com/css?family=Work%20Sans:400,500,700%7CUnna:400,700' rel='stylesheet' type='text/css'>
@@ -63,25 +63,25 @@
                     <div class="menu-right-text">
                         <p class="menu-text-title">EMAIL</p>
                         <div class="menu-text">
-                            hello@yourwebsite.com
+                            rodolfobiazi@icloud.com
                         </div>
                         <br>
                         <p class="menu-text-title">PHONE</p>
                         <div class="menu-text">
-                            +988 345 783 174
+                            +55 41 99708-2777
                         </div>
                         <br>
                         <p class="menu-text-title">LOCATION</p>
                         <div class="menu-text">
-                            2546 Some Street, <br>
-                            US Based Left 5,<br>
-                            United States, New York
+
+                            Curitiba, PR<br>
+                            Brazil
                         </div>
                         <br>
                         <div class="social-holder ">
-                            <a class="social-text" href="#">TWITTER</a>
-                            <a class="social-text" href="#">FACEBOOK</a>
-                            <a class="social-text" href="#">INSTAGRAM</a>
+                            <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
+                            <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
+                            <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
                         </div>
                     </div>
                 </div>
@@ -90,20 +90,26 @@
             <!-- Page Content Holder -->
             <div id="content" class="site-content">
                 <div class="content-holder center-relative content-1170">
-                    <h1 class="entry-title page-title center-text">
-                        Stay in touch with as
-                    </h1>
+                    <!-- <h1 class="entry-title page-title center-text">
+                        Stay in touch with me
+                    </h1> -->
 
                     <img class="page-featured-image" src="images/contact.jpg" alt="" />
 
                     <div class="one_half">
+                      <div class="medium-text">
+                          Based in Curitiba.
+                          <br>
+                          Working everywhere.
+                      </div>
+                      <br>
                         <p>
-                            Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm of global death rich in heavy atoms with pretty stories for which there’s little good evidence something incredible is waiting to be known not a sunrise but a galaxyrise shores of the cosmic ocean inconspicuous motes.
+                            Connect with me and share what's on your mind and I will gladly answer your questions.
                         </p>
-                        <br>
-                        <p>
+                        <!-- <br> -->
+                        <!-- <p>
                             Galaxies network of wormholes birth extraplanetary Apollonius of Perga adipisci velit! Muse about descended from astronomers.
-                        </p>
+                        </p> -->
                         <br>
                         <p class="my-info">
                             <span>Address:</span> Curitiba, Brazil <br>
