--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                         </div>
                         <br>
                         <div class="social-holder ">
-                            <a class="social-text" href="#">TWITTER</a>
-                            <a class="social-text" href="#">FACEBOOK</a>
-                            <a class="social-text" href="#">INSTAGRAM</a>
+                            <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
+                            <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
+                            <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
                         </div>
                     </div>
                 </div>
