--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -3,9 +3,9 @@
     <head>
         <title>Rodolfo - ADS Eletro</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="description" content="Template by CocoBasic" />
-        <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
-        <meta name="author" content="CocoBasic" />
+        <meta name="description" content="Projects and Creations" />
+        <meta name="keywords" content="RodolfoDiniz, Design, Portfolio" />
+        <meta name="author" content="Rodolfo" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
         <link rel="shortcut icon" href="images/favicon.ico" />
@@ -63,25 +63,25 @@
                     <div class="menu-right-text">
                         <p class="menu-text-title">EMAIL</p>
                         <div class="menu-text">
-                            hello@yourwebsite.com
+                            rodolfobiazi@icloud.com
                         </div>
                         <br>
                         <p class="menu-text-title">PHONE</p>
                         <div class="menu-text">
-                            +988 345 783 174
+                            +55 41 99708-2777
                         </div>
                         <br>
                         <p class="menu-text-title">LOCATION</p>
                         <div class="menu-text">
-                            2546 Some Street, <br>
-                            US Based Left 5,<br>
-                            United States, New York
+
+                            Curitiba, PR<br>
+                            Brazil
                         </div>
                         <br>
                         <div class="social-holder ">
-                            <a class="social-text" href="#">TWITTER</a>
-                            <a class="social-text" href="#">FACEBOOK</a>
-                            <a class="social-text" href="#">INSTAGRAM</a>
+                            <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
+                            <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
+                            <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
                         </div>
                     </div>
                 </div>
