--- a/about.html
+++ b/about.html
@@ -100,10 +100,13 @@
 
                             <li class="timeline-event">
                                 <span class="timeline-circle"></span>
-                                <div class="timeline-event-content">
-                                    Flatland tingling of the spine, a billion trillion science paroxysm of global death permanence
+                                <div class="timeline-event-content-title">
+                                    Ambassador & Student
                                 </div>
-                                <div class="timeline-event-date">2015</div>
+                                <div class="timeline-event-content">
+                                    Ambassador & Student
+                                </div>
+                                <div class="timeline-event-date">2019</div>
                             </li>
 
                             <li class="timeline-event">
@@ -173,11 +176,11 @@
                 <div class="footer-content center-relative">
 
                     <div class="footer-logo">
-                        <img src="images/logo.png" alt="Pekko">
+                        <img src="images/logo.png" alt="Rodolfo">
                     </div>
 
                     <div class="copyright-holder">
-                        © 2019 - Pekko HTML Template by <a href="https://cocobasic.com">Coco+Basic</a>.
+                        © 2020 - Rodolfo
                     </div>
                 </div>
             </footer>
