--- a/single.html
+++ b/single.html
@@ -181,11 +181,11 @@
                 <div class="footer-content center-relative">
 
                     <div class="footer-logo">
-                        <img src="images/logo.png" alt="Pekko">
+                        <img src="images/logo.png" alt="Rodolfo">
                     </div>
 
                     <div class="copyright-holder">
-                        © 2019 - Pekko HTML Template by <a href="https://cocobasic.com">Coco+Basic</a>.
+                        © 2020 - Rodolfo
                     </div>
                 </div>
             </footer>
