--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
                             </li>
 
                             <li class="grid-item p_one_hlaf animate">
+                                <a class="item-link" href="single-portfolio.html">
+                                    <img src="images/home_02.png" alt="" />
+                                    <div class="portfolio-text-holder">
+                                        <p class="portfolio-title">LOGOTYPE</p>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <!-- <li class="grid-item p_one_hlaf animate">
                                 <a class="item-link" href="images/home_02B.jpg" data-rel="prettyPhoto[portfolio]">
                                     <img src="images/home_02.jpg" alt="" />
                                     <div class="portfolio-text-holder">
@@ -164,7 +173,7 @@
                                         <p class="portfolio-title">MOCKUP</p>
                                     </div>
                                 </a>
-                            </li>
+                            </li> -->
 
                         </ul>
                     </div>
@@ -176,11 +185,11 @@
                 <div class="footer-content center-relative">
 
                     <div class="footer-logo">
-                        <img src="images/logo.png" alt="Pekko">
+                        <img src="images/logo.png" alt="Rodolfo">
                     </div>
 
                     <div class="copyright-holder">
-                        © 2020 - Rodolfo Diniz
+                        © 2020 - Rodolfo
                     </div>
                 </div>
             </footer>
