--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             <div class="menu-holder-front">
                 <div class="header-logo">
                     <a href="index.html">
-                        <img src="images/logo.png" alt="Pekko">
+                        <img src="images/logo.png" alt="Rodolfo">
                     </a>
                 </div>
 
@@ -101,10 +101,10 @@
                             <li class="timeline-event">
                                 <span class="timeline-circle"></span>
                                 <div class="timeline-event-content-title">
-                                    Ambassador & Student
+                                    Apple Developer Academy
                                 </div>
                                 <div class="timeline-event-content">
-                                    Ambassador & Student
+                                    The Academy is a collaboration between the Pontifical Catholic University of Parana, in partnership with Apple, to develop the skills of students in multidisciplinary fields to successfully develop applications in the Apple ecosystem.
                                 </div>
                                 <div class="timeline-event-date">2019</div>
                             </li>
