--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                                 <div class="timeline-event-content">
                                     The Academy is a collaboration between the Pontifical Catholic University of Parana, in partnership with Apple, to develop the skills of students in multidisciplinary fields to successfully develop applications in the Apple ecosystem.
                                 </div>
-                                <div class="timeline-event-date">2019</div>
+                                <div class="timeline-event-date">2019 -</div>
                             </li>
 
                             <li class="timeline-event">
