--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
                         During my five years degree I worked in the public area, in law offices, and even at Walt Disney World - which was an amazing experience. Over there I learned a lot about business - especially with customer service (which will be very important in the future of this timeline) - but none of those other jobs really suited me.
                         <br>
                         <br>
-                        So I realized that I had to go on a path to find my true motivation. I noticed that all my hobbies and passions were related to an area that I had never even considered before, <b>Design</b>. After going to lectures and taking courses I found purpose and meaning in this area full of creativity and innovation. So I started a new degree, this time in Design, where I could choose from a variety of elective courses and focus on the area of <b>User Interaction</b>.
+                        So I realized that I had to go on a path to find my true motivation. I noticed that all my hobbies and passions were related to an area that I had never even considered before, <b>Design</b>. After going to lectures and taking courses I found purpose and meaning in this area full of creativity and innovation. So I started a new degree, this time in Design, where I could choose from a variety of elective courses and focus on the area of <b>User Experience</b> and <b>User Interaction</b>.
                         <br>
                         <br>
                         Currently I'm part of the Apple Developer Academy. It has been a unique and very rewarding opportunity since I’ve been learning a lot about user interface and developing coding skills.
