--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
                         So I realized that I had to go on a path to find my true motivation. I noticed that all my hobbies and passions were related to an area that I had never even considered before, <b>Design</b>. After going to lectures and taking courses I found purpose and meaning in this area full of creativity and innovation. So I started a new degree, this time in Design, where I could choose from a variety of elective courses and focus on the area of <b>User Experience</b> and <b>User Interaction</b>.
                         <br>
                         <br>
-                        Currently I'm part of the Apple Developer Academy. It has been a unique and very rewarding opportunity since I’ve been learning a lot about user interface and developing coding skills.
+                        Currently I'm part of the Apple Developer Academy. It has been a unique and very rewarding opportunity since I’ve been learning a lot about design and developing coding skills.
                     </div>
                     <div class="clear"></div>
 
