--- a/index.html
+++ b/index.html
@@ -134,10 +134,11 @@
       </li> -->
 
       <li class="grid-item p_one_hlaf animate">
-      <a class="item-link" href="https://vimeo.com/199192931" data-rel="prettyPhoto[portfolio]">
+        <a class="item-link" href="single-portfolio.html">
+       <!-- <a class="item-link" href="https://vimeo.com/199192931" data-rel="prettyPhoto[portfolio]"> -->
       <img src="images/home_03.jpg" alt="" />
       <div class="portfolio-text-holder">
-      <p class="portfolio-title">SNEAKERS</p>
+      <p class="portfolio-title">APP</p>
     </div>
   </a>
 </li>
@@ -146,7 +147,7 @@
   <a class="item-link" href="single-portfolio.html">
     <img src="images/home_05.jpg" alt="" />
     <div class="portfolio-text-holder">
-      <p class="portfolio-title">ART</p>
+      <p class="portfolio-title">EXPERIENCE</p>
     </div>
   </a>
 </li>
@@ -155,7 +156,7 @@
   <a class="item-link" href="images/home_06.jpg" data-rel="prettyPhoto[portfolio]">
     <img src="images/home_06.jpg" alt="" />
     <div class="portfolio-text-holder">
-      <p class="portfolio-title">OFFICE</p>
+      <p class="portfolio-title">APP</p>
     </div>
   </a>
 </li>
@@ -164,7 +165,7 @@
   <a class="item-link" href="single-portfolio.html">
     <img src="images/home_07.jpg" alt="" />
     <div class="portfolio-text-holder">
-      <p class="portfolio-title">MODEL</p>
+      <p class="portfolio-title">APP</p>
     </div>
   </a>
 </li>
