--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </li> -->
 
       <li class="grid-item p_one_hlaf animate">
-        <a class="item-link" href="single-portfolio.html">
+        <a class="item-link" href="project-ventum.html">
        <!-- <a class="item-link" href="https://vimeo.com/199192931" data-rel="prettyPhoto[portfolio]"> -->
       <img src="images/home_03.jpg" alt="" />
       <div class="portfolio-text-holder">
@@ -144,7 +144,7 @@
 </li>
 
 <li class="grid-item p_one_hlaf animate">
-  <a class="item-link" href="single-portfolio.html">
+  <a class="item-link" href="project-stack-a-flag.html">
     <img src="images/home_05.jpg" alt="" />
     <div class="portfolio-text-holder">
       <p class="portfolio-title">EXPERIENCE</p>
@@ -153,7 +153,8 @@
 </li>
 
 <li class="grid-item p_one_hlaf animate">
-  <a class="item-link" href="images/home_06.jpg" data-rel="prettyPhoto[portfolio]">
+    <a class="item-link" href="project-juicy-way.html">
+  <!-- <a class="item-link" href="images/home_06.jpg" data-rel="prettyPhoto[portfolio]"> -->
     <img src="images/home_06.jpg" alt="" />
     <div class="portfolio-text-holder">
       <p class="portfolio-title">APP</p>
@@ -162,7 +163,7 @@
 </li>
 
 <li class="grid-item p_one_hlaf animate">
-  <a class="item-link" href="single-portfolio.html">
+  <a class="item-link" href="project-food-app.html">
     <img src="images/home_07.jpg" alt="" />
     <div class="portfolio-text-holder">
       <p class="portfolio-title">APP</p>
@@ -171,10 +172,10 @@
 </li>
 
 <li class="grid-item p_one_hlaf animate">
-  <a class="item-link" href="single-portfolio.html">
+  <a class="item-link" href="project-sheb.html">
     <img src="images/home_08.jpg" alt="" />
     <div class="portfolio-text-holder">
-      <p class="portfolio-title">MOCKUP</p>
+      <p class="portfolio-title">WEBSITE</p>
     </div>
   </a>
 </li>
