--- a/project-ventum.html
+++ b/project-ventum.html
@@ -97,7 +97,7 @@
                     <div id="slider1" class="simple-image-slider-wrapper relative swiper-container" data-speed="1500" data-auto="true">
                         <div class="swiper-wrapper image-slider slider">
                             <div class="swiper-slide">
-                                <img src="images/item_01.jpg" alt="">
+                                <img src="images/ventum.001.jpeg" alt="">
                             </div>
                             <div class="swiper-slide">
                                 <img src="images/item_02.jpg" alt="">
