--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <li class="grid-item p_one_hlaf animate">
         <a class="item-link" href="project-ventum.html">
        <!-- <a class="item-link" href="https://vimeo.com/199192931" data-rel="prettyPhoto[portfolio]"> -->
-      <img src="images/home_03.jpg" alt="" />
+      <img src="images/ventumlogo.png" alt="" />
       <div class="portfolio-text-holder">
       <p class="portfolio-title">APP</p>
     </div>
