--- a/project-ventum.html
+++ b/project-ventum.html
@@ -103,7 +103,7 @@
                                 <img src="images/item_02.jpg" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/item_03.jpg" alt="">
+                                <img src="images/ventum03.001.jpeg" alt="">
                             </div>
                         </div>
                         <div class="clear"></div>
