--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <a class="item-link" href="project-ads.html">
                 <img src="images/home_02.png" alt="" />
                 <div class="portfolio-text-holder">
-                  <p class="portfolio-title">LOGOTYPE</p>
+                  <p class="portfolio-title">BRANDING</p>
                 </div>
               </a>
             </li>
@@ -145,7 +145,7 @@
 
 <li class="grid-item p_one_hlaf animate">
   <a class="item-link" href="project-stack-a-flag.html">
-    <img src="images/home_05.jpg" alt="" />
+    <img src="images/StackAFlagCoverImage.png" alt="" />
     <div class="portfolio-text-holder">
       <p class="portfolio-title">EXPERIENCE</p>
     </div>
