--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 <li class="grid-item p_one_hlaf animate">
   <a class="item-link" href="project-food-app.html">
-    <img src="images/home_07.jpg" alt="" />
+    <img src="images/foodcapa" alt="" />
     <div class="portfolio-text-holder">
       <p class="portfolio-title">APP</p>
     </div>
