--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 <li class="grid-item p_one_hlaf animate">
   <a class="item-link" href="project-sheb.html">
-    <img src="images/Icone.png" alt="" />
+    <img src="images/Icona.png" alt="" />
     <div class="portfolio-text-holder">
       <p class="portfolio-title">WEBSITE</p>
     </div>
