--- a/project-ventum.html
+++ b/project-ventum.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Rodolfo - ADS Eletro</title>
+        <title>Rodolfo - Ventum</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Projects and Creations" />
         <meta name="keywords" content="RodolfoDiniz, Design, Portfolio" />
