--- a/project-sheb.html
+++ b/project-sheb.html
@@ -97,14 +97,14 @@
                     <div id="slider1" class="simple-image-slider-wrapper relative swiper-container" data-speed="1500" data-auto="true">
                         <div class="swiper-wrapper image-slider slider">
                             <div class="swiper-slide">
-                                <img src="images/item_01.jpg" alt="">
+                                <img src="images/shebsite.jpeg" alt="">
                             </div>
-                            <div class="swiper-slide">
+                            <!-- <div class="swiper-slide">
                                 <img src="images/item_02.jpg" alt="">
                             </div>
                             <div class="swiper-slide">
                                 <img src="images/item_03.jpg" alt="">
-                            </div>
+                            </div> -->
                         </div>
                         <div class="clear"></div>
                         <div class="swiper-pagination simple-image-slider-pagination swiper-pagination-slider1"></div>
