--- a/project-sheb.html
+++ b/project-sheb.html
@@ -126,19 +126,19 @@
                     <div class="one_third last">
                         <div class="info-code">
                             <p class="info-code-title">PROJECT</p>
-                            <p class="info-code-content">Logo Redesign</p>
+                            <p class="info-code-content">Website Interface</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">CLIENT</p>
-                            <p class="info-code-content">ADS Eletro</p>
+                            <p class="info-code-content">SHEB Law Firm</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">DATE</p>
-                            <p class="info-code-content">2018</p>
+                            <p class="info-code-content">2017</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">LOCATION</p>
-                            <p class="info-code-content">São José dos Pinhais, Brazil</p>
+                            <p class="info-code-content">Rio de Janeiro, Brazil</p>
                         </div>
                     </div>
                     <div class="clear"></div>
