--- a/project-sheb.html
+++ b/project-sheb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Rodolfo - ADS Eletro</title>
+        <title>Rodolfo - SHEB Law Firm</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Projects and Creations" />
         <meta name="keywords" content="RodolfoDiniz, Design, Portfolio" />
@@ -119,7 +119,7 @@
                           The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letter shapes are shaped to compliment and balance perfectly with the logo symbol.
 <br>
 <br>
-                          The two corporate colors are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its strong combination of modern and classic, a timeless solution.
+                          SHEB’s differential is a close and strong relationship between the firm and our clients, making our team accessible and dedicated to the matter. In order to meet our client’s needs and give a high-quality service, our lawyers and consultants have years of experience in several areas of knowledge, and also are fluent in several languages, such as English, German, Spanish, and Italian.
                         </p>
                     </div>
 
