--- a/about.html
+++ b/about.html
@@ -111,10 +111,13 @@
 
                             <li class="timeline-event">
                                 <span class="timeline-circle"></span>
+                                <div class="timeline-event-content-title">
+                                    Design School
+                                </div>
                                 <div class="timeline-event-content">
                                     Rings of Uranus the only home we’ve ever known. Permanence of the stars Tunguska event drake equation encyclopaedia galactica great turbulent
                                 </div>
-                                <div class="timeline-event-date">2017</div>
+                                <div class="timeline-event-date">2017 -</div>
                             </li>
 
                             <li class="timeline-event">
@@ -122,7 +125,7 @@
                                 <div class="timeline-event-content">
                                     Gathered by gravity preserve and cherish that pale blue dot quasar, the carbon in our apple pies pudding
                                 </div>
-                                <div class="timeline-event-date">2018</div>
+                                <div class="timeline-event-date">2017 - 2018</div>
                             </li>
 
                             <li class="timeline-event">
@@ -130,7 +133,7 @@
                                 <div class="timeline-event-content">
                                     Tendrils of gossamer clouds, the ash of stellar alchemy tendrils of true gossamer clouds vangelis the sky calls to us rich in heavy atoms something
                                 </div>
-                                <div class="timeline-event-date">2020</div>
+                                <div class="timeline-event-date">2012 - 2017</div>
                             </li>
 
                             <li class="timeline-event">
@@ -138,7 +141,7 @@
                                 <div class="timeline-event-content">
                                     Muse about descended from astronomers shores of the cosmic ocean across the centuries encyclopaedia galactica Euclid intelligent beings. As a patch of light Apollonius of Perga, rings of Uranus network for which there’s little good evidence something fine.
                                 </div>
-                                <div class="timeline-event-date">2025</div>
+                                <div class="timeline-event-date">2014 - 2015</div>
                             </li>
 
                         </ul>
