--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
                                     Apple Developer Academy
                                 </div>
                                 <div class="timeline-event-content">
-                                    The Academy is a collaboration between the Pontifical Catholic University of Parana, in partnership with Apple, to develop the skills of students in multidisciplinary fields to successfully develop applications in the Apple ecosystem.
+                                    Tha Academy is a collaboration between the Pontifical Catholic University of Parana, in partnership with Apple, to develop the skills of students in multidisciplinary fields to successfully develop applications in the Apple ecosystem.
                                 </div>
                                 <div class="timeline-event-date">2019 -</div>
                             </li>
@@ -122,6 +122,9 @@
 
                             <li class="timeline-event">
                                 <span class="timeline-circle"></span>
+                                <div class="timeline-event-content-title">
+                                    Tentativa
+                                </div>
                                 <div class="timeline-event-content">
                                     Gathered by gravity preserve and cherish that pale blue dot quasar, the carbon in our apple pies pudding
                                 </div>
