--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
                             <li class="timeline-event">
                                 <span class="timeline-circle"></span>
                                 <div class="timeline-event-content-title">
-                                    Tentativa
+                                    Renault Experience
                                 </div>
                                 <div class="timeline-event-content">
                                     Gathered by gravity preserve and cherish that pale blue dot quasar, the carbon in our apple pies pudding
@@ -133,6 +133,9 @@
 
                             <li class="timeline-event">
                                 <span class="timeline-circle"></span>
+                                <div class="timeline-event-content-title">
+                                    Law School
+                                </div>
                                 <div class="timeline-event-content">
                                     Tendrils of gossamer clouds, the ash of stellar alchemy tendrils of true gossamer clouds vangelis the sky calls to us rich in heavy atoms something
                                 </div>
@@ -141,6 +144,9 @@
 
                             <li class="timeline-event">
                                 <span class="timeline-circle"></span>
+                                <div class="timeline-event-content-title">
+                                    Walt Disney World Resort
+                                </div>
                                 <div class="timeline-event-content">
                                     Muse about descended from astronomers shores of the cosmic ocean across the centuries encyclopaedia galactica Euclid intelligent beings. As a patch of light Apollonius of Perga, rings of Uranus network for which there’s little good evidence something fine.
                                 </div>
