--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
                                     Walt Disney World Resort
                                 </div>
                                 <div class="timeline-event-content">
-                                    Muse about descended from astronomers shores of the cosmic ocean across the centuries encyclopaedia galactica Euclid intelligent beings. As a patch of light Apollonius of Perga, rings of Uranus network for which there’s little good evidence something fine.
+                                    Cultural and work exchange, focusing on the development of technical skills in the field of business, language and hospitality.
                                 </div>
                                 <div class="timeline-event-date">2014/15  </div>
                             </li>
