--- a/project-cubx.html
+++ b/project-cubx.html
@@ -121,7 +121,7 @@
 Among several creative projects I was one of the award-winning students to go to the US to spend a week in San Jose/CA taking advantage of every second of the lectures and sessions provided by Apple.
 <br>
 <br>
-                For more information about the project click <aa href="https://youtu.be/pSGEoZ1iin4">here</aa>.
+                For more information about the project click <a href="https://youtu.be/pSGEoZ1iin4">here</a>.
                         </p>
                     </div>
 
